Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24947

"Open Terminal Here" always opens default profile initial directory with Konsole

    XMLWordPrintable

Details

    • Linux/X11
    • 5c0ec9210c877c025ad0f0d3f4c32797ade7e989 (qt-creator/qt-creator/4.14)

    Description

      How to reproduce

      When in the project or file system view, selecting a file and choosing "Open Terminal Here" in the context menu doesn't open konsole in the corresponding file working directory.

      Even if the "Initial directory" is unset in the default Konsole profile (see figure attached), it doesn't open under the corresponding file working directory, and instead opens in the home directory of the current session.

       

      Possible solution

      I manage to fix and have the intended behavior by setting the following custom 'Command line arguments used for "Open Terminal Here"':

      --separate --workdir .
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            con Eike Ziller
            fboni Francisco Boni Neto
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes