Fix initial directory when using konsole for Open Terminal Here

Fixes: QTCREATORBUG-24947
Change-Id: I14f5b47ba2ad71005653faadd5e78fda9570196e
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>